/*
 * $Id: ChangeLog,v 1.1098 2003/06/03 23:34:56 lculik Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2003-06-04 21:40 UTC-0800 Brian Hays <bhays@abacuslaw.com>
  * source/rtl/memoline.c
      * Fixed problem with source string starting with CRLF
  * doc/tracing.txt
      * Added docs for TraceLog() and __TRACEPRGCALLS( <lOnOff> ) --> <lOldValue>
  * source/common/trace.c
      * reverted last changes to HB_TRACE support.

2003-06-03 20:30 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@uol.com.br>

  * source/rdd/dbfcdx/dbfcdx1.c

    ! minor fix to hb_cdxWriteDBHeader() and hb_cdxReadDBHeader() functions by adding the codepage support

  * include/hbdbf.h
    ! minor fix to DBFHEADER Structure
  ! utils/hbmake/hbmake.prg
    ! removed gtnul linkage

2003-06-03 23:46 UTC-0800 Ron Pinkas <ron@ronpinkas.com>
  * source/pp/ppcore.c
    ! Fixed bug with expansion of NON repeatable Marker into Repeatable Residual group.

  * tests/pp.prg
    ! Minor fixed to rewinding logic in MatchRule()

  - tests/PP_info.prg
    - Removed unneeded file.

  * source/vm/extend.c
    - Removed 1 unused var.

  * xdiff.txt
    * Updated to include:
      + Properties by Refernce.
      + Module Scope.
      + Persistent Blocks.

2003-05-03 12:30 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@uol.com.br>
  * source/rdd/dbcmd.c
    ! fixed problem that was causing GPF with DbCreate()/DBUseArea() functions(added an new paramter for specifing the codepage)
  * source/pp/pptable.c
    ! Added CODEPAGE support to USE and CREATE commands
  * utils/hbmake/hbmake.prg
    ! Added support for linking xharbour.so when requested

2003-06-03 05:50 UTC+0200 Przemyslaw Czerpak <druzus@polbox.com>
  * xharbour/source/vm/classes.c
    ! checking the pointer returned by hb_dynsymFindName in functions
      'hb_objGetRealCls' and 'hb_clsHasMsg'.