@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.1098 2003/06/03 23:34:56 lculik Exp $
+ * $Id: ChangeLog,v 1.1099 2003/06/05 04:55:25 brianhays Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,12 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+2003-06-05 14:20 UTC-0300 Luiz Rafael Culik Guimaraes <culikr@uol.com.br>
+  ! source/rdd/dbfntx/dbfntx1.c
+    ! Fix on ntxOrderListFocus() which was not refreshing the Current record number
+    when order number change. Error Reported by Mihalffy Lajos
+  ! utils/hbmake/hbmake.prg
+    ! Added linkage of codepage library
 
 2003-06-04 21:40 UTC-0800 Brian Hays <bhays@abacuslaw.com>
   * source/rtl/memoline.c
